@@ -1,7 +1,9 @@
 * unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.8
     - Changed SIR to single instance application
+    - Improved saving "Exif.Image.Orientation" metadata tag
     - Removed setting empty dcraw path string after browse cancel
     - Fixed left arrow shortcut for previous image in PreviewDialog
+    - Fixed no files with lowercase extension in "Add File" dialog
     - Removed defines.h file
 
 * Sun Aug 24 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.3
